# IATD-SOAT-HACKTON-YOLO-INFERENCE

./: .docker.env.example  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml
.github/hooks/: enforce-uv-over-pip.json
.github/hooks/scripts/: enforce_uv_over_pip.py
.github/prompts/: plan-fastApiImageInferenceEndpoint.prompt.md
tests/: conftest.py
tests/integration/: test_infer_endpoint.py
tests/unit/: test_image_inference_service.py  test_image_inference_use_case_protocol.py  test_infer_controller_response_contract.py  test_settings.py  test_yolo_adapter.py
yolo_inference_api/adapters/inbound/: infer_controller.py
yolo_inference_api/adapters/outbound/: yolo_adapter.py
yolo_inference_api/application/: image_inference_use_case.py
yolo_inference_api/domain/: image_inference_port.py  inference_detection.py
yolo_inference_api/infrastructure/: settings.py
